Fix: inner & outer circle alignment

--- a/src/pages/MyGoalsPage/MyGoalsPage.scss
+++ b/src/pages/MyGoalsPage/MyGoalsPage.scss
@@ -71,22 +71,21 @@
 
 .goal-dropdown {
   position: relative;
-  margin-top: 2px;
 }
 
 .goal-dd-inner {
   width: 24px;
   height: 24px;
-  margin-top: 2.8px;
-  margin-left: 2.6px;
+  // margin-top: 2.8px;
+  // margin-left: 2.6px;
   border-radius: 50%;
 }
 .goal-dd-outer {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 28px;
-  height: 28px;
+     top: -2.5px;
+    left: -2.1px;
+    width: 27px;
+    height: 27px;
   border: solid;
   border-width: 1.4px;
   border-radius: 50%;
